--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Pocket PEM</h1>
+    <a href="toc.html"><h1>Pocket PEM</h1></a>
     <img src="./slides/pocketpem.jpeg">
     
     
