--- a/pulmonology.html
+++ b/pulmonology.html
@@ -15,6 +15,12 @@
     </a>
     </div>
 
+    <div class="button1" style="background-color:58585A">
+    <a href="toc.html"</a>
+        <p>Bact to Table of Contents</p>
+    </a>
+    </div>
+
 </body>
 </html>
 
