--- a/toc.html
+++ b/toc.html
@@ -45,6 +45,8 @@
     <a href="pulmonology.html">
         <p class="button1">Pulmonology</p>
     </a>
+    </div>
+    
     
         <div class="button1" style="background-color:B10057">
     <a href="procedures.html">
