--- a/resuscitation.html
+++ b/resuscitation.html
@@ -49,6 +49,13 @@
         <p>Pressors </p>
     </a>
     </div>
+    
+    <div class="button1" style="background-color:58585A">
+    <a href="toc.html"</a>
+        <p>Bact to Table of Contents</p>
+    </a>
+    </div>    
+    
 </body>
 </html>
 
