--- a/toc.html
+++ b/toc.html
@@ -55,8 +55,8 @@
     </div>
     
         <div class="button1" style="background-color:00A2FF">
-    <a href="https://google.com">
-        <p class="button1">*</p>
+    <a href="index.html">
+        <p class="button1">Pocket PEM</p>
     </div>
    
     
