--- a/toc.html
+++ b/toc.html
@@ -5,9 +5,12 @@
 </head>
 
 <body>
+    
+
+    
     <div class="button1" style="background-color:DD0030">
     <a href="resuscitation.html">
-        <p>Resuscitation </p>
+        <p class="button1">Resuscitation</p>
     </a>
     </div>
 
