--- a/pulmonology.html
+++ b/pulmonology.html
@@ -7,8 +7,8 @@
     
 
         <div class="button1" style="background-color:7C378A">
-    <a href="weightvitals.html"</a>
-        <p>Weight & Vitals </p>
+    <a href="bronchiolitis.html"</a>
+        <p>Bronchiolitis </p>
     </a>
     </div>
 
