--- a/neonate.html
+++ b/neonate.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="NICU.html"><img src="./slides/neonate.jpeg"></a>
+    <a href="nicu.html"><img src="./slides/neonate.jpeg"></a>
 
     
     
