--- a/iem.html
+++ b/iem.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="metabolism.html"><img src="./slides/iem.jpeg"></a>
+    <a href="metabolic.html"><img src="./slides/iem.jpeg"></a>
+
 
     
     
