--- a/procedures.html
+++ b/procedures.html
@@ -18,7 +18,7 @@
     </div>
     <div class="button1" style="background-color:58585A">
     <a href="toc.html"</a>
-        <p>Bact to Table of Contents</p>
+        <p>Back to Table of Contents</p>
     </a>
     </div>
 </body>
