add disclaimer and about us

--- a/toc.html
+++ b/toc.html
@@ -57,6 +57,11 @@
     </a>
     </div>
     
+    <div class="button1" style="background-color:00A2FF">
+    <a href="index.html">
+        <p class="button1">About us</p>
+    </div>
+    
         <div class="button1" style="background-color:00A2FF">
     <a href="index.html">
         <p class="button1">Pocket PEM</p>
