add disclaimer and about us

--- a/toc.html
+++ b/toc.html
@@ -57,12 +57,12 @@
     </a>
     </div>
     
-    <div class="button1" style="background-color:00A2FF">
+    <div class="button1" style="background-color:58585A">
     <a href="index.html">
         <p class="button1">About us</p>
     </div>
     
-        <div class="button1" style="background-color:00A2FF">
+        <div class="button1" style="background-color:B10057">
     <a href="index.html">
         <p class="button1">Pocket PEM</p>
     </div>
