--- a/toc.html
+++ b/toc.html
@@ -51,7 +51,7 @@
     </div>
     
     
-        <div class="button1" style="background-color:B10057">
+        <div class="button1" style="background-color:00A2FF">
     <a href="procedures.html">
         <p class="button1">Procedures</p>
     </a>
