fix about us link

--- a/toc.html
+++ b/toc.html
@@ -58,7 +58,7 @@
     </div>
     
     <div class="button1" style="background-color:58585A">
-    <a href="index.html">
+    <a href="aboutus.html">
         <p class="button1">About us</p>
     </div>
     
