add BRUE, miscellaneous

--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-    <title>Inborn Errors in Metabolism</title>
+    <title>Miscellaneous</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
 
-        <div class="button1" style="background-color:0AA275">
-    <a href="iem.html"</a>
-        <p>Inborn Errors in Metabolism </p>
+        <div class="button1" style="background-color:00A2FF">
+    <a href="brue.html"</a>
+        <p>BRUE </p>
     </a>
     </div>
     <div class="button1" style="background-color:58585A">
