--- a/toc.html
+++ b/toc.html
@@ -49,9 +49,13 @@
         <p class="button1">Pulmonology</p>
     </a>
     </div>
+
+    <div class="button1" style="background-color:00A2FF">
+    <a href="miscellaneous.html">
+        <p class="button1">Miscellaneous</p>
+    </div>    
     
-    
-        <div class="button1" style="background-color:00A2FF">
+        <div class="button1" style="background-color:000000">
     <a href="procedures.html">
         <p class="button1">Procedures</p>
     </a>
