pics back to TOC and infant care

--- a/cardiacsx.html
+++ b/cardiacsx.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="cardiology.html"><img src="./slides/cardiacsx.jpeg"></a>
+    <a href="toc.html"><img src="./slides/cardiacsx.jpeg"></a>
 
 
     
