--- a/infantcare.html
+++ b/infantcare.html
@@ -11,6 +11,11 @@
         <p>Crashing Neonate </p>
     </a>
     </div>
+    <div class="button1" style="background-color:7CB854">
+    <a href="brue.html"</a>
+        <p>BRUE </p>
+    </a>
+    </div>
     <div class="button1" style="background-color:58585A">
     <a href="toc.html"</a>
         <p>Back to Table of Contents</p>
