--- a/lp.html
+++ b/lp.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="procedures.html"><img src="./slides/lp.jpeg"></a>
+    <a href="toc.html"><img src="./slides/lp.jpeg"></a>
 
     
     
