--- a/brue.html
+++ b/brue.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="miscellaneous.html"><img src="./slides/brue.jpeg"></a>
+    <a href="toc.html"><img src="./slides/brue.jpeg"></a>
 
     
     
