--- a/lefractures.html
+++ b/lefractures.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="orthopedics.html"><img src="./slides/lefractures.jpeg"></a>
+    <a href="toc.html"><img src="./slides/lefractures.jpeg"></a>
 
     
     
