--- a/parkland.html
+++ b/parkland.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="resuscitation.html"><img src="./slides/parkland.jpeg"></a>
+    <a href="toc.html"><img src="./slides/parkland.jpeg"></a>
 
     
     
