--- a/pressors.html
+++ b/pressors.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="resuscitation.html"><img src="./slides/pressors.jpeg"></a>
+    <a href="toc.html"><img src="./slides/pressors.jpeg"></a>
 
     
     
