change menu to add meds and added drips and resus

--- a/toc.html
+++ b/toc.html
@@ -15,8 +15,8 @@
     </div>
 
     <div class="button1" style="background-color:E57D05">
-    <a href="cardiology.html">
-        <p class="button1">Cardiology</p>
+    <a href="cardiopulmonary.html">
+        <p class="button1">CardioPulmonary</p>
     </a>
     </div>
 
@@ -45,8 +45,8 @@
     </div>
     
         <div class="button1" style="background-color:7C378A">
-    <a href="pulmonology.html">
-        <p class="button1">Pulmonology</p>
+    <a href="meds.html">
+        <p class="button1">Meds</p>
     </a>
     </div>
     
