--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>Pocket PEM</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="llu.jpg" />
 </head>
 <body>
     <a href="disclaimer.html"><img src="./slides/pocketpem.jpeg"></a>
