--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <title>Pocket PEM</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/x-icon" href="LLU.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <a href="disclaimer.html"><img src="./slides/pocketpem.jpeg"></a>
