--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Pocket PEM</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png">
 </head>
 <body>
     <a href="disclaimer.html"><img src="./slides/pocketpem.jpeg"></a>
