--- a/antibiotics.html
+++ b/antibiotics.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-    <title>Pocket PEM</title>
+    <title>Drips</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="toc.html"><img src="./slides/asthma.jpeg"></a>
+    <a href="toc.html"><img src="./slides/antibiotics.jpeg"></a>
 
     
     
