--- a/cardiopulmonary.html
+++ b/cardiopulmonary.html
@@ -18,6 +18,16 @@
     </a>
     </div>
     
+      <div class="button1" style="background-color:E57D05">
+    <a href="asthma.html"</a>
+        <p>Asthma </p>
+    </a>
+    </div>
+          <div class="button1" style="background-color:E57D05">
+    <a href="htn.html"</a>
+        <p>Pediatric Hypertension </p>
+    </a>
+    </div>
     <div class="button1" style="background-color:58585A">
     <a href="toc.html"</a>
         <p>Back to Table of Contents</p>
