--- a/procedures.html
+++ b/procedures.html
@@ -6,6 +6,16 @@
 <body>
     
 
+            <div class="button1" style="background-color:B10057">
+    <a href="io.html"</a>
+        <p>IO Placement </p>
+    </a>
+    </div>
+            <div class="button1" style="background-color:B10057">
+    <a href="efast.html"</a>
+        <p>eFAST </p>
+    </a>
+    </div>
         <div class="button1" style="background-color:B10057">
     <a href="lp.html"</a>
         <p>LP Hold Technique </p>
