--- a/htn.html
+++ b/htn.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="toc.html"><img src="./slides/asthma.jpeg"></a>
+    <a href="toc.html"><img src="./slides/htn.jpeg"></a>
 
     
     
