--- a/disclaimer.1.html
+++ b/disclaimer.1.html
@@ -7,8 +7,10 @@
 <body>
     
     <div class="button2" style="background-color:58585A">
-    <a href="mailto:pocketpem@gmail.com">For questions or comments email: PocketPem@gmail.com
-or CLICK HERE</a>
+    <a href="mailto:pocketpem@gmail.com">
+        <p></p>For questions or comments 
+        <p></p>email: PocketPem@gmail.com
+        <p></p>or CLICK HERE</a>
     </div>
     
     <div class="button2" style="background-color:58585A">
