--- a/disclaimer.1.html
+++ b/disclaimer.1.html
@@ -8,8 +8,7 @@
     
     <div class="button3" style="background-color:58585A">
     <a href="mailto:pocketpem@gmail.com">
-        <p></p>For questions or comments 
-        <p></p>email: PocketPem@gmail.com
+        <p></p>For questions or comments email: PocketPem@gmail.com
         <p></p>or CLICK HERE</a>
         <p></p>
     </div>
