--- a/disclaimer.1.html
+++ b/disclaimer.1.html
@@ -8,7 +8,7 @@
     
     <div class="button3" style="background-color:58585A">
     <a href="mailto:pocketpem@gmail.com">
-        <p></p>For questions or comments email: PocketPem@gmail.com</a>
+        <p></p>For questions or comments email: PocketPEM@gmail.com</a>
         <p></p>
     </div>
     
