--- a/disclaimer.1.html
+++ b/disclaimer.1.html
@@ -1,18 +1,18 @@
 <html>
 <head>
     <title>Pocket PEM</title>
-    <link rel="stylesheet" href="style.1.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     
-    <div class="button2" style="background-color:OOOOOO">
+    <div class="button2" style="background-color:58585A">
     <a href="mailto:pocketpem@gmail.com">
         <p></p>For questions or comments email: PocketPEM@gmail.com</a>
         <p></p>
     </div>
     
-    <div class="button3" >
+    <div class="button3" style="background-color:58585A">
         <a href="toc.html">
         <p></p>After reading Disclaimer, CLICK HERE
         <p></p>By reading this website* and its contents you agree not to use the website’s contents as medical advice to treat any medical condition in either yourself or others, including but not limited to patients that you are treating.</p> 
