--- a/disclaimer.html
+++ b/disclaimer.html
@@ -5,6 +5,11 @@
 </head>
 
 <body>
+    <div class="button2" style="background-color:58585A">
+    <a href="toc.html">
+        <p></p>DISCLAIMER</a>
+        <p>after reading CLICK HERE</p>
+    </div>
     
     <div class="button2" style="background-color:58585A">
     <a href="mailto:pocketpem@gmail.com">
@@ -14,7 +19,6 @@
     
     <div class="button3" style="background-color:58585A">
         <a href="toc.html">
-        <p></p>After reading Disclaimer, CLICK HERE
         <p></p>By reading this website* and its contents you agree not to use the website’s contents as medical advice to treat any medical condition in either yourself or others, including but not limited to patients that you are treating.</p> 
         <p></p>Consult your own physician for any medical issues that you may be having. This entire disclaimer also applies to any guests or contributors to this website. Under no circumstances shall this website or any contributors to the website be responsible for damages arising from use of the website or its contents.
         <p></p>The information on this site has been, and continues to be, compiled from multiple sources and multiple authors. It is intended for clinicians only and not directly for patients or patient care. 
