--- a/disclaimer.html
+++ b/disclaimer.html
@@ -8,7 +8,7 @@
     <div class="button2" style="background-color:58585A">
     <a href="toc.html">
         <p></p>DISCLAIMER</a>
-        <p>after reading CLICK HERE</p>
+        <p>after reading, click on page to enter</p>
     </div>
 
     
