--- a/disclaimer.html
+++ b/disclaimer.html
@@ -28,7 +28,7 @@
 
     <div class="button2" style="background-color:58585A">
     <a href="mailto:pocketpem@gmail.com">
-        <p></p>For questions or comments email: PocketPEM@gmail.com</a>
+        <p>For questions or comments email: </p>PocketPEM@gmail.com</a>
         <p></p>
     </div>
     
