--- a/infantcare.html
+++ b/infantcare.html
@@ -5,7 +5,16 @@
 </head>
 <body>
     
-
+ <div class="button1" style="background-color:7CB854">
+    <a href="formula.html"</a>
+        <p>Infant Formulas </p>
+    </a>
+    </div>
+     <div class="button1" style="background-color:7CB854">
+    <a href="nutrition.html"</a>
+        <p>Infant Nutrition </p>
+    </a>
+    </div>
         <div class="button1" style="background-color:7CB854">
     <a href="neonate.html"</a>
         <p>Crashing Neonate </p>
