--- a/toc.html
+++ b/toc.html
@@ -67,10 +67,9 @@
     </div>
    <p> </p>
    <p> </p>
-   <div style="text-align:center"
-   "font-size:40px"
-   >
-       <a href="numbers.html" style="color:black" >#</a>
+   <div style=text-align:center;font-size:20px;
+    >
+       <a href="numbers.html" style="color:black" >☎</a>
    </div>
 
     
