--- a/toc.html
+++ b/toc.html
@@ -69,7 +69,7 @@
    <p> </p>
    <div style=text-align:center;font-size:20px;
     >
-       <a href="numbers.html" style="color:black" >☎</a>
+       <a href="numbers.html" style="color:black" >☏</a>
    </div>
 
     
