--- a/toc.html
+++ b/toc.html
@@ -67,9 +67,8 @@
     </div>
    <p> </p>
    <p> </p>
-   <div style=text-align:center;font-size:30px;
-    >
-       <a href="numbers.html" style="color:black" >☏</a>
+   <div style=text-align:center;font-size:30px;>
+       <a href="numbers.html" style="color:black" >☎</a>
    </div>
 
     
