--- a/toc.html
+++ b/toc.html
@@ -73,8 +73,8 @@
    <p> </p>
    <p> </p>
    <p> </p>
-   <div style=text-align:center;font-size:30px;>
-       <a href="numbers.html" style="color:black" >✪</a>
+   <div style=text-align:center;font-size:20px;>
+       <a href="numbers.html" style="color:black" >☤</a>
    </div>
 
     
