--- a/infantcare.html
+++ b/infantcare.html
@@ -15,8 +15,13 @@
         <p>Infant Nutrition </p>
     </a>
     </div>
+            <div class="button1" style="background-color:7CB854">
+    <a href="neonatalresus.html"</a>
+        <p>Neonatal Resus</p>
+    </a>
+    </div>
         <div class="button1" style="background-color:7CB854">
-    <a href="neonate.html"</a>
+    <a href="crashingneonate.html"</a>
         <p>Crashing Neonate </p>
     </a>
     </div>
