--- a/disclaimer.html
+++ b/disclaimer.html
@@ -8,8 +8,9 @@
     <div class="button2" style="background-color:58585A">
     <a href="toc.html">
         <p></p>DISCLAIMER</a>
+         <a href="toc.html">
         <p>after reading, click on page to enter</p>
-    </div>
+    </div></a>
 
     
     <div class="button3" style="background-color:58585A">
