--- a/meds.html
+++ b/meds.html
@@ -17,7 +17,7 @@
     </div>
     
     <div class="button1" style="background-color:7C378A">
-    <a href="resus.html"</a>
+    <a href="resusmeds.html"</a>
         <p>Resus Meds</p>
     </a>
     </div>
