--- a/disclaimer1.html
+++ b/disclaimer1.html
@@ -4,7 +4,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div1>
     <a href="toc.html"><img src="./slides/disclaimer.jpeg"></a>
+    </div1>
+    <div2>
+    <a href="mailto:pocketpem@gmail.com"><img src="./slides/email.jpeg"></a>
+</div2>
     
 
     
