--- a/disclaimer1.html
+++ b/disclaimer1.html
@@ -4,12 +4,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div1>
-    <a href="toc.html"><img src="./slides/disclaimer.jpeg"></a>
-    </div1>
-    <div2>
-    <a href="mailto:pocketpem@gmail.com"><img src="./slides/email.jpeg"></a>
-</div2>
+    <div1>
+    <a href="toc.html"><img src="./slides/disclaimer.jpeg"></a></div1>
+    <div class="button2" style="background-color:58585A">
+    <a href="mailto:pocketpem@gmail.com">
+        <p>For questions or comments email: </p>PocketPEM@gmail.com</a>
+        <p></p>
+    </div>
     
 
     
