--- a/disclaimer1.html
+++ b/disclaimer1.html
@@ -5,12 +5,10 @@
 </head>
 <body>
     <div1>
-    <a href="toc.html"><img src="./slides/disclaimer.jpeg"></a></div1>
-    <div class="button2" style="background-color:58585A">
-    <a href="mailto:pocketpem@gmail.com">
-        <p>For questions or comments email: </p>PocketPEM@gmail.com</a>
-        <p></p>
-    </div>
+    <a href="toc.html"><img src="./slides/disclaimer.jpeg"></a>
+    <a href="toc.html"><img src="./slides/email.jpeg"></a>
+    </div1>
+
     
 
     
