--- a/aboutus.html
+++ b/aboutus.html
@@ -4,14 +4,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="toc.html"><img src="./slides/aboutus.jpeg"></a>
-
     
+<div class="container">
+  <a href="toc.html"><img src="./slides/aboutus.jpeg"></a>
+  <a href="https://twitter.com/PocketPEM"><button class="btn">@PocketPEM</button></a>
+</div>
     
-    <div class="a2a_kit a2a_kit_size_32 a2a_default_style a2a_follow">
-    <a class="a2a_button_twitter" data-a2a-follow="PocketPEM"></a>
-    <a class="a2a_button_facebook" data-a2a-follow="PocketPEM"></a>
-    <a class="a2a_button_instagram" data-a2a-follow="Pocket_PEM"></a>
 
 </div>
 
