--- a/toc.html
+++ b/toc.html
@@ -77,8 +77,8 @@
        <a href="numbers.html" style="color:black" >☤</a>
    </div>
 
-<div class="a2a_kit a2a_kit_size_32 a2a_default_style a2a_follow">
-    <a class="a2a_button_twitter" data-a2a-follow="PocketPEM"></a>
+<div class="a2a_kit a2a_kit_size_32 a2a_default_style a2a_follow"  style="padding: 5%;">
+    <a class="a2a_button_twitter" data-a2a-follow="PocketPEM" ></a>
     <a class="a2a_button_facebook" data-a2a-follow="PocketPEM"></a>
     <a class="a2a_button_instagram" data-a2a-follow="Pocket_PEM"></a>
 
