--- a/aboutus.html
+++ b/aboutus.html
@@ -10,7 +10,7 @@
 <div class="container">
         <a href="toc.html"><img src="./slides/aboutus.jpeg"></a>
 
-  <a href="https://twitter.com/PocketPEM"><button class="btn">@PocketPEM</button></a>
+  <a href="http://twitter.com/PocketPEM"><button class="btn">@PocketPEM</button></a>
 </div>
     
 
