--- a/aboutus.html
+++ b/aboutus.html
@@ -8,9 +8,12 @@
 
     
 <div class="container">
-        <a href="toc.html"><img src="./slides/aboutus.jpeg"></a>
+    <a href="toc.html"><img src="./slides/aboutus.jpeg"></a>
 
-  <a href="http://twitter.com/PocketPEM"><button class="btn">@PocketPEM</button></a>
+    <a href="http://twitter.com/PocketPEM"><button class="btn">@PocketPEM</button></a>
+    <a href="http://twitter.com/liz_fierro_md"><button class="btn1" >@liz_fierro_md</button></a>
+    <a href="http://twitter.com/natasha_y_li"><button class="btn2" >@natasha_y_li</button></a>
+
 </div>
     
 
