--- a/socialmedia.html
+++ b/socialmedia.html
@@ -6,3 +6,13 @@
 </div>
 
 <script async src="https://static.addtoany.com/menu/page.js"></script>
+<p> </p>
+
+<a href="https://twitter.com/liz_fierro_md?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @liz_fierro_md</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<p> </p>
+<a href="https://twitter.com/PocketPEM?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @PocketPEM</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<p> </p>
+
+<a href="https://twitter.com/natasha_y_li?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @natasha_y_li</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
