--- a/toc.html
+++ b/toc.html
@@ -39,7 +39,7 @@
     </div>
     
         <div class="button1" style="background-color:3465AA">
-    <a href="orthopedics">
+    <a href="orthopedics.html">
         <p class="button1">Orthopedics</p>
     </a>
     </div>
