--- a/toc.html
+++ b/toc.html
@@ -74,7 +74,7 @@
    <p> </p>
    <p> </p>
    <div style=text-align:center;font-size:20px;>
-       <a href="numbers.html" style="color:black" >&phone;</a>
+       <a href="numbers.html" style="color:black" >&#x2624</a>
    </div>
 
 <div class="a2a_kit a2a_kit_size_32 a2a_default_style a2a_follow"  style="padding: 5%;">
