--- a/meds.html
+++ b/meds.html
@@ -27,6 +27,12 @@
         <p>Drips</p>
     </a>
     </div>
+    
+        <div class="button1" style="background-color:7C378A">
+    <a href="hycet.html"</a>
+        <p>Hycet Dosing</p>
+    </a>
+    </div>
 
     <div class="button1" style="background-color:58585A">
     <a href="toc.html"</a>
