--- a/meds.html
+++ b/meds.html
@@ -27,6 +27,12 @@
         <p>Drips</p>
     </a>
     </div>
+
+        <div class="button1" style="background-color:7C378A">
+    <a href="inversed.html"</a>
+        <p>INtranasal Versed</p>
+    </a>
+    </div>
     
         <div class="button1" style="background-color:7C378A">
     <a href="hycet.html"</a>
