--- a/lluasthma.html
+++ b/lluasthma.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="toc.html"><img src="./slides/numbers.jpeg"></a>
+    <a href="toc.html"><img src="./slides/lluasthma.jpeg"></a>
 
     
     
