--- a/cardiopulmonary.html
+++ b/cardiopulmonary.html
@@ -12,6 +12,12 @@
     </a>
     </div>
     
+            <div class="button1" style="background-color:E57D05">
+    <a href="ekgbasics.html"</a>
+        <p>EKG Basics </p>
+    </a>
+    </div>
+    
     <div class="button1" style="background-color:E57D05">
     <a href="bronchiolitis.html"</a>
         <p>Bronchiolitis </p>
