--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-<head><!-- Global site tag (gtag.js) - Google Analytics -->
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MJHFS2G6QE"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -8,6 +9,17 @@
 
   gtag('config', 'G-MJHFS2G6QE');
 </script>
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-80961CQPYJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-80961CQPYJ');
+</script>
+  
     <title>Pocket PEM</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
