--- a/meds.html
+++ b/meds.html
@@ -40,6 +40,12 @@
     </a>
     </div>
 
+        <div class="button1" style="background-color:7C378A">
+    <a href="steroidequivalent.html"</a>
+        <p>Steroid Equivalents</p>
+    </a>
+    </div>
+
     <div class="button1" style="background-color:58585A">
     <a href="toc.html"</a>
         <p>Back to Table of Contents</p>
