--- a/antibiotics.html
+++ b/antibiotics.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Drips</title>
+    <title>Antibiotics</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
