--- a/meds.html
+++ b/meds.html
@@ -41,7 +41,7 @@
     </div>
     
         <div class="button1" style="background-color:7C378A">
-    <a href="steroidequivalent.html"</a>
+    <a href="steroidequivalents.html"</a>
         <p>Steroid Equivalents</p>
     </a>
     </div>
